fix: form mobile sizes, text overflowing, mobile display

--- a/src/componetns/inputs/style.module.scss
+++ b/src/componetns/inputs/style.module.scss
@@ -4,7 +4,6 @@
 $height: 54px;
 .uploadComponent{
   display: flex;
-  width: 380px;
   &:hover{
     cursor: pointer;
   }
@@ -38,6 +37,7 @@ $height: 54px;
       color: $color-font;
       text-overflow: ellipsis;
       white-space: nowrap;
+      overflow: hidden;
     }
   }
 }
@@ -52,10 +52,14 @@ $height: 54px;
   }
 }
 
+.inputWrap{
+  width: 100%;
+}
+
 .inputComponent{
   position: relative;
   .input{
-    width: 380px;
+    width: 100%;
     flex-grow: 1;
     display: flex;
     align-items: center;
@@ -86,11 +90,6 @@ $height: 54px;
   }
 }
 @media screen and (max-width: 360px){
-  .inputComponent{
-    .input{
-      width: 380px - 16px * 3;
-    }
-  }
   .uploadComponent{
      max-width: 380px - 16px * 3;
   }
